@@ -140,6 +140,7 @@ struct Network {
         bool dhcp_send_hostname;
         int dhcp_broadcast;
         int dhcp_ipv6_only_mode;
+        bool dhcp_use_rapid_commit;
         bool dhcp_use_dns;
         bool dhcp_use_dns_set;
         bool dhcp_routes_to_dns;
